# pystates

./: .gitignore  README.md  example.py  main.py  pyproject.toml
.github/workflows/: python-publish.yml
src/pystates/: __init__.py  epsilon.py  event.py  input.py  state_machine.py  transition.py  transition_matrix.py
src/python_states/: __init__.py  epsilon.py  event.py  input.py  state_machine.py  transition_matrix.py
