[project]
name = "pystates"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tedtasman", email = "tktasman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
]

[project.scripts]
pystates = "pystates:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
