[project]
name = "pystates"
version = "0.2.0"
description = "A package for abstracting state machine logic"
readme = "README.md"
authors = [
    { name = "tedtasman", email = "tktasman@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pystates = "pystates:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.ruff]
line-length = 88
